# write-a-c-compiler

./: .gitignore  CMakeLists.txt  README.md  test.c
.github/workflows/: test.yaml
driver/: main.cpp
include/AST/: AST.h
include/CodeGen/: CodeGen.h
include/Lexer/: Lexer.h  Token.h
include/Parser/: Parser.h
include/Support/: Diagnostic.def  Diagnostic.h  TokenKinds.h  Tokenkinds.def
src/: CMakeLists.txt
src/AST/: CMakeLists.txt
src/CodeGen/: CMakeLists.txt  CodeGen.cpp
src/Driver/: CMakeLists.txt  main.cpp
src/Lexer/: CMakeLists.txt  Lexer.cpp
src/Parser/: CMakeLists.txt  Parser.cpp
src/Support/: CMakeLists.txt  Diagnostic.cpp  Tokenkinds.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Lexer/: demo.c
tools/: CMakeLists.txt  LexerTest.cpp
tools/driver/: driver.cpp
